--- a/package.json
+++ b/package.json
@@ -8,15 +8,20 @@
     "@storybook/react": "^7.5.3",
     "@storybook/react-vite": "^7.5.3",
     "@storybook/testing-library": "^0.2.2",
+    "@types/eslint": "^8.56.5",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
+    "@typescript-eslint/eslint-plugin": "^7.1.1",
+    "@typescript-eslint/parser": "^7.1.1",
     "autoprefixer": "^10.4.16",
+    "eslint": "^8.57.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "storybook": "^7.5.3",
     "tailwindcss-react-aria-components": "^1.0.0",
-    "typescript": "^5.3.2",
+    "typescript": "^5.3.3",
+    "typescript-eslint": "^7.1.1",
     "vite": "^5.0.10"
   },
   "scripts": {
